k8s-cluster-configuration/applications/notate/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notate
  labels:
    app: notate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notate
  template:
    metadata:
      labels:
        app: notate
    spec:
      containers:
      - name: notate
        image: registry.k6nis.dev/notate:latest
        ports:
        - containerPort: 3000
