k8s-cluster-configuration/applications/notate/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: notate-gateway
  namespace: notate
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "notate.so,www.notate.so"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: notate.so
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: notate-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-www
      protocol: HTTPS
      port: 8443
      hostname: www.notate.so
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: notate-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notate
  namespace: notate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: notate-gateway
      namespace: notate
  hostnames:
    - notate.so
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: notate-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: notate-www-redirect
  namespace: notate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: notate-gateway
      namespace: notate
  hostnames:
    - www.notate.so
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: notate.so
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
